# voyager

./: .gitignore  README.md  pyproject.toml
.agents/skills/load-context-v1/: SKILL.md
.claude/: settings.local.json
.claude/skills/load-context-v1/: SKILL.md
.voyager/: graph.json
designs/V1/: Alita Agent Workflow.md  Apply Pipeline.md  Architecture V1.md  Design Decisions & Constraints.md  Directory Structure.md  Example Fixture Pattern.md  JDTLS Dependency Management.md  LSP Architecture.md  Manual Test Steps for Patch Flow.md  Manual Test Steps for Rename Field.md  Next Steps.md  Project Structure and Reading Guide.md  Voyager Server Mode.md
examples/: README.md  e2e_v1.py  reset.py
examples/_sources/mini-order/: pom.xml
examples/_sources/shop-dto/: pom.xml
examples/mini-customer/: pom.xml
examples/shop-dto/: pom.xml
scripts/: jdtls.cmd  setup_jdtls.py
src/alita/: __init__.py  agent.py  context.py  policy.py  run.py  tool_commands.py  tools.py
src/alita/runtime/: __init__.py  adk_runtime.py  base.py  events.py  manual_runtime.py  providers.py
src/cli/commands/: apply.py  errors.py  plan.py  scan.py
src/core/: __init__.py
src/core/diff/: __init__.py  diff_engine.py  patch_engine.py
src/core/engine/: errors.py  execution_engine.py
src/core/graph/: __init__.py  builder.py  semantic_graph.py
src/core/lsp/: __init__.py  client.py  config.py
src/core/operation/: __init__.py  models.py
src/core/parser/: __init__.py  java_parser.py
src/core/rules/: validator.py
src/core/server/: __init__.py  client.py  protocol.py  server.py
src/storage/: manager.py
src/utils/: async_helpers.py
src/voyager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/voyager_cmd/: __init__.py  daemon.py  main.py  runner.py  server.py
tests/: __init__.py  test_alita_v1.py  test_server_v1.py  test_static_v1.py
(+15 files in other folders)
