[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voyager"
version = "0.1.0"
description = "Semantic code modification system with cross-file consistency"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    # LSP client uses stdlib asyncio/subprocess (no extra dependency)
    # Requires language servers to be installed separately:
    #   Java: jdtls (Eclipse JDT Language Server)
    #   TODO: Python: pyright-langserver
    #   TODO: TypeScript: typescript-language-server
    #   TODO: Go: gopls
    #   TODO: C/C++: clangd
    #   TODO: C#: OmniSharp
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
voyager = "voyager_cmd.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
